# CMakeList.txt : CMake project for countdown, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("countdown")

# Add source to this project's executable.
add_executable (countdown "countdown.cpp" )

# TODO: Add tests and install targets if needed.
